[tool.poetry]
name = "Magnetic-Fusion-Performance"
version = "0.0.0"
description = "Using twinLab to predict the performance for fusion devices"
authors = ["Cyd Cowley <cyd@digilab.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
jupyter = "^1.0.0"
twinlab = "^2.6"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
pandas = "^1.0.0"
ipykernel = "^6.25.0"

[tool.poetry.group.dev.dependencies]
hmcode = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
